--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,9 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="description" content="サイトの簡潔な説明（例: 北海道で育てた高品質なお米のオンラインショップ）">
+    <meta name="keywords" content="北海道, 米, 農業, ゆめぴりか, ななつぼし, 農家、蘭越">
+    <meta name="author" content="FARMひまわり">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -13,7 +16,7 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
-    <title>高橋Agriculture・Farm</title>
+    <title>FARM ひまわり</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
