--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="description" content="サイトの簡潔な説明（例: 北海道で育てた高品質なお米のオンラインショップ）">
+    <meta name="description" content="北海道蘭越町で生産されたブランド米『ゆめぴりか』『ななつぼし』を手掛ける農業法人の公式サイト。お米作りへの情熱と品質へのこだわりをご紹介します。">
     <meta name="keywords" content="北海道, 米, 農業, ゆめぴりか, ななつぼし, 農家、蘭越">
     <meta name="author" content="FARMひまわり">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
